# StatsAndPlots

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_utils/: __init__.py
data_utils/plotting/: __init__.py  custom_plotting.py  matplotlib_plotting.py  new_plot_funcs.py  plot_class.py  plot_utils.py
data_utils/stats/: __init__.py
statsandplots/: __init__.py
statsandplots/plotting/: __init__.py  matplotlib_plotting.py  plot_class.py  plot_utils.py  plotly_plotting.py  seaborn_plotting.py
statsandplots/stats/: __init__.py  aov.py  ecdf.py  input_output.py  kde_func.py  spreadsheet_functions.py  stats_functions.py  stats_helpers.py  two_sample.py
statsandplots/utils/: __init__.py  dataholder.py  transforms.py
utils/: __init__.py
utils/plotting/: new_plot_funcs.py
utils/stats/: __init__.py  ecdf.py  spreadsheet_functions.py  stats_functions.py
