[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data_utils"
description = "Package for analyzing data."
authors = [{ name = "Lars Henrik Nelson", email = "larshnelson@protonmail.com" }]
dynamic = ["version"]
keywords = ["analysis"]
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "statsmodels"
]
requires-python = ">=3.9"
license = {text = 'GNU General Public License v3 (GPLv3)'}

[tool.setuptools.dynamic]
version = {attr = "data_utils.__version__"}