[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data_utils"
description = "Package for analyzing data."
authors = [{ name = "Lars Henrik Nelson", email = "larshnelson@protonmail.com" }]
version = "0.0.1"
keywords = ["analysis"]
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "statsmodels"
]
requires-python = ">=3.9"
license = {text = 'GNU General Public License v3 (GPLv3)'}

[tool.setuptools.dynamic]
