[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "statsandplots"
description = "Package for analyzing data."
authors = [{ name = "Lars Henrik Nelson", email = "larshnelson@protonmail.com" }]
version = "0.0.1"
keywords = ["analysis"]
dependencies = [
    "KDEpy",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "statsmodels",
    "openpyxl",
    "lxml"
]
requires-python = ">=3.9"
license = {text = 'GNU General Public License v3 (GPLv3)'}

[tool.setuptools.dynamic]
